--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </p>
 <x3d width='1200px' height='800px'>
 <scene>
-
+    <Viewpoint position="58.38117 81.31521 148.57769" orientation="-0.93212 -0.36214 0.00151 0.55959" 
+	zNear="76.14804" zFar="299.32554" centerOfRotation="0.00000 0.00000 0.00000" fieldOfView="0.78540" description="defaultX3DViewpointNode"></Viewpoint>
 <inline url="https://raw.githubusercontent.com/erickherreraresearch/ejemplox3d/main/ejemplo_param.x3d"> </inline>
 </scene>
 </x3d>
